# torch-visual-transformer

./: main.py  pyproject.toml  pyrightconfig.json  serve_html.go
html/: positional_encoding.html  transformer_mask.html
utils/: __init__.py  dataloaders.py  engine.py  get_data.py  utils.py
vit/: __init__.py  attention.py  clone.py  decoder.py  decoderlayer.py  embeddinglayer.py  embeddings.py  encoder.py  encoderdecoder.py  encoderlayer.py  generator.py  layernorm.py  model.py  msa.py  multiheadattention.py  positionalencoding.py  positionwisefeedforward.py  sublayerconnection.py
vit/helpers/: subsequentmask.py
