[project]
name = "VisionTransformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
    "setuptools==81.0",
    "tensorboard>=2.20.0",
    "tensorboard-plugin-profile>=2.22.0",
    "torch>=2.10.0",
    "torch-tb-profiler>=0.4.3",
    "torchinfo>=1.8.0",
    "torchsummary>=1.5.1",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]
